[project]
name = "q3-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub[cli]>=0.36.0",
    "numpy<2",
    "qwen-tts",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]

[tool.uv.workspace]
members = [
    "Qwen3-TTS",
]

[tool.uv.sources]
qwen-tts = { workspace = true }

[tool.uv.extra-build-dependencies]
flash-attn = ["setuptools"]
